@@ -1,3 +1,7 @@
+Sat May 10 08:47:36 2014  Tanaka Akira  <akr@fsij.org>
+
+	* signal.c (trap): Return "SYSTEM_DEFAULT" if SIG_DFL is set.
+
 Fri May  9 14:27:05 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (RUBY_SETJMP_TYPE): check for setjmp type after
